header spacing additional fixes, changed images

--- a/frontend/src/components/BlogListCard.css
+++ b/frontend/src/components/BlogListCard.css
@@ -27,7 +27,7 @@
     height: 100%;
     margin-left: 10%;
     align-content: flex-start;
-    border-style: dashed;
+
 }
 
 .blog-card-title{
