--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -30,7 +30,7 @@ ul{
 }
 
 .header ul li{
-    flex:1;
+    flex:2;
     text-align: center;
     position: relative;
     resize: none;
@@ -43,9 +43,10 @@ ul{
     font-family: Arial, Helvetica, sans-serif;
     -ms-transform: translateY(50%);
     transform: translateY(35%);
-    
+    font-size: 90%;
     text-align: center;
-
+    width: fit-content;
+ 
 }
 
 .link{
